--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pinpoint",
   "productName": "Pinpoint",
-  "description": "Starter for NW.js application. Out of the box ready for serious stuff.",
+  "description": "GIS Desktop application for the reporting of Arkansas Crashes.",
   "version": "0.1.0",
   "author": "Zach Russell <zrussell1@harding.edu>",
   "main": "app.html",
@@ -16,10 +16,9 @@
     "position": "center"
   },
   "dependencies": {
-    "angular": "^1.5.3",
-    "angular-animate": "^1.5.3",
-    "angular-ui-bootstrap": "^1.3.1",
-    "angular-ui-router": "^1.0.0-alpha.4",
-    "fs-jetpack": "^0.6.4"
+    "express": "^4.13.4",
+    "fs-jetpack": "^0.6.4",
+    "sqlite3": "^3.1.3",
+    "vue": "^1.0.21"
   }
 }
