--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "devDependencies": {
-    "fs-jetpack": "^0.7.0",
-    "gulp": "^3.8.8",
-    "gulp-babel": "^5.2.1",
-    "gulp-less": "^1.3.6",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.1",
-    "nw": "^0.12.3",
-    "q": "^1.0.1",
-    "tree-kill": "^0.1.1",
-    "yargs": "^1.3.1"
+  "name": "vueapp",
+  "productName": "VueApp",
+  "description": "A simple boilerplate to create a nw.js app with Vue.js",
+  "version": "0.1.0",
+  "author": "My Name <myname@provider.com>",
+  "main": "app.html",
+  "window": {
+    "icon": "icon.png",
+    "show": true,
+    "toolbar": true,
+    "width": 1000,
+    "height": 600,
+    "min_width": 800,
+    "min_height": 400,
+    "position": "center"
   },
-  "optionalDependencies": {
-    "appdmg": "^0.3.1"
+  "devDependencies": {
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-runtime": "^5.8.34",
+    "css-loader": "^0.23.0",
+    "gulp": "^3.8.8",
+    "gulp-stylus": "^2.3.1",
+    "nw": "^0.12.3",
+    "nw-dev": "^1.3.1",
+    "q": "^1.4.1",
+    "tree-kill": "^1.0.0"
+  },
+  "dependencies": {
+    "vue": "^1.0.21",
+    "vue-strap": "^1.0.7"
   },
   "scripts": {
-    "postinstall": "cd ./app  &&  npm install",
-    "build": "./node_modules/.bin/gulp build",
-    "start": "node ./tasks/start",
-    "test": "node ./tasks/start --env=test",
-    "release": "./node_modules/.bin/gulp release --env=production"
   }
 }
