--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "window": {
     "icon": "icon.png",
     "show": true,
-    "toolbar": true,
+    "toolbar": false,
     "width": 1000,
     "height": 600,
     "min_width": 800,
@@ -30,9 +30,14 @@
     "tree-kill": "^1.0.0"
   },
   "dependencies": {
+    "express": "^4.13.4",
+    "leaflet-draw": "^0.3.0",
+    "proj4": "^2.3.14",
+    "sqlite3": "^3.1.3",
     "vue": "^1.0.21",
     "vue-strap": "^1.0.7"
   },
   "scripts": {
+    "postinstall": "cd ./node_modules/sqlite3 && node-pre-gyp rebuild --runtime=node-webkit --target=0.12.3 --target_arch=x64"
   }
 }
