--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "window": {
     "icon": "icon.png",
     "show": true,
-    "toolbar": true,
+    "toolbar": false,
     "width": 1000,
     "height": 600,
     "min_width": 800,
@@ -22,18 +22,19 @@
     "gulp-stylus": "^2.3.1",
     "nw": "^0.12.3",
     "q": "^1.4.1",
-    "tree-kill": "^1.0.0"
+    "tree-kill": "^1.0.0",
+    "innosetup-compiler": "^5.5.62",
+    "nw-builder": "^2.1.0"
   },
   "dependencies": {
     "express": "^4.13.4",
     "leaflet-draw": "^0.3.0",
     "proj4": "^2.3.14",
-    "spatialite": "^0.0.6",
+    "sqlite3": "^3.1.3",
     "vue": "^1.0.21",
     "vue-strap": "^1.0.7"
   },
   "scripts": {
-    "postinstall": "npm buildsqlte && gulp unziptilecache",
-    "buildsqlite": "cd ./node_modules/spatialite/node_modules/sqlite3 && node-pre-gyp rebuild --runtime=node-webkit --target=0.12.3 --target_arch=x64"
+    "postinstall": "cd ./node_modules/sqlite3 && node-pre-gyp rebuild --runtime=node-webkit --target=0.12.3 --target_arch=ia32 && gulp unziptilecache"
   }
 }
